<resources>
    <string name="app_name">video</string>
    <string name="my_ads">Мои объявления</string>
    <string name="cars_adc">Машины</string>
    <string name="pc_ads">Компьютеры</string>
    <string name="smartphone_ads">Смартфоны</string>
    <string name="dm_ads">Бытовая техника</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_out">выход</string>
    <string name="sign_in">вход</string>

</resources>