<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:title="@string/my_ads"
            android:id="@+id/ic_my_ads"
            android:icon="@drawable/ic_my_ads"

        <item android:title="@string/cars_adc"
            android:id="@+id/ic_cars_adc"
            android:icon="@drawable/ic_cars_adc"

        <item android:title="@string/pc_ads"
            android:id="@+id/ic_pc_ads"
            android:icon="@drawable/ic_pc_ads"

        <item android:title="@string/smartphone_ads"
            android:id="@+id/ic_smartphone_ads"
            android:icon="@drawable/ic_smartphone_ads"

        <item android:title="@string/dm_ads"
            android:id="@+id/ic_dm_ads"
            android:icon="@drawable/ic_dm_abs"

        <item android:title="@string/sign_in"
            android:id="@+id/ic_sign_in"
            android:icon="@drawable/ic_sign_in"

        <item android:title="@string/sign_out"
            android:id="@+id/ic_sign_out"
            android:icon="@drawable/sign_out"

        <item android:title="@string/sign_up"
            android:id="@+id/ic_sign_up"
            android:icon="@drawable/ic_sign_up"

    </group>

</menu>